--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Techtalk Phonegap</title>
+
+  <link rel="stylesheet" href="js/libs/normalize-css/normalize.css">
 </head>
 <body>
-  teste
+
+
+  <!-- libs and plugins -->
+  <script src="js/libs/angular/angular.js"></script>
+  <script src="js/libs/angular-animate/angular-animate.js"></script>
+  <script src="js/libs/angular-route/angular-route.js"></script>
+  <script src="js/libs/angular-touch/angular-touch.js"></script>
+
+  <!-- my files -->
 </body>
 </html>
