Addd some transitions

--- a/www/index.html
+++ b/www/index.html
@@ -5,9 +5,10 @@
   <title>Techtalk Phonegap</title>
 
   <link rel="stylesheet" href="js/libs/normalize-css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body ng-controller="MainCtrl as main">
-  <div ng-view ng-class="main.slide"></div>
+<body ng-controller="MainCtrl">
+  <div ng-view ng-class="slide" class="app"></div>
 
   <!-- libs and plugins -->
   <script src="js/libs/angular/angular.js"></script>
